package NYT.NYTree.NProto;

option java_package = "ru.yandex.yt.ytree";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////

message TAttribute
{
    required string key = 1;
    required bytes value = 2;
}

message TAttributeDictionary
{
    repeated TAttribute attributes = 1;
}

////////////////////////////////////////////////////////////////////////////////
